# kontocast

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: camt053.xml  dkb.csv  ing.csv  labels.csv  sparkasse.csv
src/kontocast/: __init__.py  cli.py  forecast.py  models.py  recurring.py  store.py  synth.py
src/kontocast/categorize/: __init__.py  evaluate.py  llm.py  rules.py
src/kontocast/parsers/: __init__.py  camt053.py  dkb.py  ing.py  sparkasse.py
tests/: test_forecast.py  test_parsers.py  test_recurring.py  test_rules.py
